# rzem-ai-mj-lora

./: .gitignore  CLAUDE.md  README.md  index.html  lora-40154857.json  lora-40154857.lora-project  package-lock.json  package.json  vite.config.ts
docs/plans/: 2026-01-16-offline-mode-implementation.md  2026-01-16-offline-mode-qwen2vl-design.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  lora-40154857.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: candle_inference.rs  claude.rs  file_ops.rs  image_utils.rs  lib.rs  model_manager.rs  offline_analyzer.rs  settings.rs
src/components/: BatchCard.vue  BatchValidator.vue  ExportPanel.vue  ImageUploader.vue  PromptGuidelinesCard.vue  StepIndicator.vue  StyleAnalysisCard.vue  SubjectDistributionCard.vue  TrainingRecommendationsCard.vue
src/router/: index.ts
src/stores/: project.ts
src/types/: schema.ts
src/utils/: export.ts  validation.ts
src/views/: AnalysisView.vue  BatchEditorView.vue  ExportView.vue  SettingsView.vue  UploadView.vue
