[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
anyhow = "1.0"
dirs = "6.0"
thiserror = "2.0"
log = "0.4"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.19"
image = "0.25"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", features = ["metal", "accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.9", features = ["mkl"] }

